<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:defaultValue="@string/defaultUrl"
        android:key="restUrl"
        android:summary="@string/urlSummary"
        android:title="@string/restUrl" />
    <EditTextPreference
        android:defaultValue="@string/defaultUser"
        android:key="usr"
        android:summary="@string/userSummary"
        android:title="@string/username" />

    <CheckBoxPreference
        android:key="alarm"
        android:title="Enable/Disable alarms" />

    <PreferenceScreen
        android:key="sortSettings"
        android:summary="@string/sortSummary"
        android:title="@string/sortSettings" >
        <intent
            android:targetClass="com.imaginea.android.sugarcrm.ModuleSortConfigActivity"
            android:targetPackage="com.imaginea.android.sugarcrm" />
    </PreferenceScreen>
    <PreferenceScreen
        android:key="syncSettings"
        android:summary="@string/syncSummary"
        android:title="@string/syncSettings" >
        <intent
            android:targetClass="com.imaginea.android.sugarcrm.sync.SyncConfigActivity"
            android:targetPackage="com.imaginea.android.sugarcrm" />
    </PreferenceScreen>

</PreferenceScreen>