<?xml version="1.0" encoding="utf-8"?>
<!--
  /*******************************************************************************
   * Copyright (c) {DATE} {INITIAL COPYRIGHT OWNER} {OTHER COPYRIGHT OWNERS}.
   * All rights reserved. This program and the accompanying materials
   * are made available under the terms of the Eclipse Public License v1.0
   * which accompanies this distribution, and is available at
   * http://www.eclipse.org/legal/epl-v10.html
   *
   * Contributors:
   *    {INITIAL AUTHOR} - initial API and implementation and/or initial documentation
   *******************************************************************************/
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/home"
        android:icon="@drawable/menu_home"
        android:title="@string/home"/>
    <item
        android:id="@+id/search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"/>
    <item
        android:id="@+id/addItem"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/addItem"/>
    <item
        android:id="@+id/sort"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/sort"/>
    <item
        android:id="@+id/importContact"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/importContact"/>

</menu>
