<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/actonbar"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/actionbar_height"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/actionbar_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:onClick="true"
            android:paddingLeft="10dp"
            android:src="@drawable/ico_actionbar_m_back" />

        <TextView
            style="@style/header_text_label"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/actionbar_height"
            android:layout_toRightOf="@id/actionbar_back"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:singleLine="true"
            android:text="@string/settings"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/done"
            style="@style/header_text_label"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/actionbar_height"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:paddingRight="20dp"
            android:singleLine="true"
            android:text="@string/save" />

        <ImageView
            android:id="@+id/editDoneImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_toLeftOf="@id/done"
            android:onClick="true"
            android:src="@drawable/ico_m_actionbar_done_nor" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#EDEDED"
        android:orientation="vertical"
        android:padding="30dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/head1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="30dip"
                android:paddingTop="20dip"
                android:text="@string/synchrnizing"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="30dip"
                android:paddingTop="10dip"
                android:text="@string/startDate"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" >
            </TextView>

            <Button
                android:id="@+id/startDate"
                style="?android:attr/spinnerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:paddingLeft="10dip"
                android:paddingTop="10dip"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="30dip"
                android:paddingTop="10dip"
                android:text="@string/endDate"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" >
            </TextView>

            <Button
                android:id="@+id/endDate"
                style="?android:attr/spinnerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:paddingLeft="10dip"
                android:paddingTop="10dip"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/recordtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="30dip"
                android:paddingTop="10dip"
                android:text="@string/downloadedrecords_title"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" >
            </TextView>

            <Spinner
                android:id="@+id/recordsize"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:paddingTop="10dip" />

            <TextView
                android:id="@+id/head2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="30dip"
                android:paddingTop="30dip"
                android:text="@string/sugarCrmUrlHeader"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/crmUrl"
                style="@style/edit_text_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/restUrl"
                android:inputType="textUri"
                android:maxLines="1"
                android:paddingTop="10dip"
                android:textColor="@android:color/black" >
            </EditText>

            <TextView
                android:id="@+id/head3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="30dip"
                android:paddingTop="30dip"
                android:text="@string/notification"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp" >

                <CheckBox
                    android:id="@+id/enableAlarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/alarmText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/enableAlarm"
                    android:layout_toRightOf="@id/enableAlarm"
                    android:gravity="center"
                    android:text="@string/enablealarm"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black" >
                </TextView>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>