<?xml version="1.0" encoding="utf-8"?>
<!--
  /*******************************************************************************
   * Copyright (c) {DATE} {INITIAL COPYRIGHT OWNER} {OTHER COPYRIGHT OWNERS}.
   * All rights reserved. This program and the accompanying materials
   * are made available under the terms of the Eclipse Public License v1.0
   * which accompanies this distribution, and is available at
   * http://www.eclipse.org/legal/epl-v10.html
   *
   * Contributors:
   *    {INITIAL AUTHOR} - initial API and implementation and/or initial documentation
   *******************************************************************************/
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/module_sort_config"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- <include layout="@layout/header" /> -->

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/moduleNameContainer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/moduleName"
                    style="@style/text_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/module"
                    android:width="120dip" />

                <Spinner
                    android:id="@+id/module_spinner"
                    style="@style/text_row_value"
                    android:layout_width="fill_parent"
                    android:layout_height="45dp"
                    android:drawSelectorOnTop="true"
                    android:prompt="@string/module" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/moduleFieldContainer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/moduleField"
                    style="@style/text_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moduleField"
                    android:width="120dip" />

                <Spinner
                    android:id="@+id/moduleField_spinner"
                    style="@style/text_row_value"
                    android:layout_width="fill_parent"
                    android:layout_height="45dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sortOrderContainer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/sortOrder"
                    style="@style/text_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sortBy"
                    android:width="120dip" />

                <Spinner
                    android:id="@+id/sortOrder_spinner"
                    style="@style/text_row_value"
                    android:layout_width="fill_parent"
                    android:layout_height="45dp" />
            </LinearLayout>

            <Button
                android:id="@+id/saveSortOrder"
                style="@style/button_style"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:onClick="saveSortOrder"
                android:text="@string/save" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
